--- a/app/views/industries/index.html.erb
+++ b/app/views/industries/index.html.erb
@@ -1,3 +1,27 @@
 <h1>Industries</h1>
 
 <%= link_to "Add Industry", new_industry_path %>
+
+<div class="industry">
+
+<% @industries.each do |industry| %>
+<p>
+  <%= link_to industry.name, industry_path(industry) %>
+</p>
+<p>
+  <%= industry.created_at %>
+</p>
+<p>
+  <%= industry.updated_at %>
+</p>
+<% end %>
+
+<h3>Affiliated Companies</h3>
+<table>
+  <thead>
+    <tr>
+      <th>Name</th>
+    </tr>
+  </thead>
+</table>
+</div>
