--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,19 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
+<div class="container">
+  <% flash.each do |type, message| %>
+  <% if type == "notice" %>
+  <div class="alert alert-success">
+    <b><center><%= message %></b></center>
+  </div>
+  <% elsif type == "alert" %>
+  <div class="alert alert-danger">
+    <b><center><%= message %></b></center>
+  </div>
+  <% end %>
+  <% end %>
+</div>
 <%= yield %>
 
 </body>
