--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -24,9 +24,9 @@
     </tr>
   </thead>
   <tbody>
-    <%= @industries.each do |company| %>
+    <% @industries.each do |industry| %>
     <tr>
-      <td> <%= company.name %></td>
+      <td> <%= industry.name%></td>
     </tr>
     <% end %>
   </tbody>
