--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -13,8 +13,8 @@
 <p>
   <%= @company.updated_at %>
 </p>
-<!-- <%= link_to 'Edit', edit_company_path(@company) %>
-<%= link_to 'Delete', company_path(@company), method: :delete, confirm:'Are you sure?' %> -->
+<%= link_to 'Edit', edit_company_path(@company) %>
+<%= link_to 'Delete', company_path(@company), method: :delete, confirm:'Are you sure?' %>
 <br>
 <h3>Affiliated Industries</h3>
 <table>
